tests/baselines/reference/symbolType14(strict=true).errors.txt
symbolType14.ts(1,1): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== symbolType14.ts (1 errors) ====
    new Symbol();
    ~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.